--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -23,78 +23,57 @@ emoji=^(?!.*[🇦-🇿]{2}).*(俄罗斯|莫斯科|圣彼得堡|Russia|Moscow|Sai
 emoji=^(?!.*[🇦-🇿]{2}).*(中国|深圳|北京|上海|广东|山东|湖北|湖南|天津|重庆|辽宁|吉林|黑龙江|江苏|浙江|安徽|福建|云南|四川|陕西|甘肃|青海|内蒙古|西藏|宁夏|新疆|China|Shenzhen|Beijing|Shanghai|Guangdong|Shandong|Hubei|Hunan|Tianjin|Chongqing|Liaoning|Jilin|Heilongjiang|Jiangsu|Zhejiang|Anhui|Fujian|Yunnan|Sichuan|Shanxi|Gansu|Qinghai|Inner Mongolia|Tibet|Ningxia|Xinjiang),🇨🇳
 emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤|@|：|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]|\d{1,3}(?!\d))|^[^:]+:(?![\da-f]{0,4}:|\s*\d{1,5}([/?]|\s*$)))),ℹ️
 
-# 规则生成设置
 enable_rule_generator=true
 overwrite_original_rules=true
 
 # ========== 代理分组配置 ==========
-# 主要代理组 - 基础代理选择
 custom_proxy_group=✈️起飞`select`[]⚡低延迟`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定`[]DIRECT`[]REJECT
-custom_proxy_group=⚡低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=⚡低延迟`url-test`.*`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=👆🏻指定`select`.*
 
-# 直连和拦截
 custom_proxy_group=🛩️墙内`select`[]DIRECT`[]✈️起飞
 custom_proxy_group=💩广告`select`[]REJECT`[]DIRECT`[]✈️起飞
 
-# 流媒体分组
 custom_proxy_group=📺B站`select`[]🛩️墙内`[]DIRECT`[]🇭🇰香港`[]🇹🇼台湾
 custom_proxy_group=🎬流媒体`select`[]✈️起飞`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定
 custom_proxy_group=🎬Netflix`select`[]🎬流媒体`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他
 custom_proxy_group=🎬YouTube`select`[]🎬流媒体`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国
 custom_proxy_group=🟢Spotify`select`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]DIRECT`[]🎏其他
 
-# 社交和通讯
 custom_proxy_group=📲社交媒体`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定
 custom_proxy_group=📱电报`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定
 
-# 开发和AI服务
 custom_proxy_group=🧰开发工具`select`[]✈️起飞`[]🇺🇸美国`[]🇸🇬新加坡`[]🇹🇼台湾`[]🇯🇵日本`[]🇭🇰香港`[]👆🏻指定`[]DIRECT
 custom_proxy_group=🤖AI`select`[]🇺🇸美国`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]✈️起飞`[]👆🏻指定
 
-# 游戏和大型平台服务
 custom_proxy_group=🎮游戏平台`select`[]✈️起飞`[]DIRECT`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🎏其他
 custom_proxy_group=🛡️Google服务`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]DIRECT
 custom_proxy_group=Ⓜ️微软服务`select`[]DIRECT`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本
 custom_proxy_group=🍎苹果服务`select`[]DIRECT`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本
 
-# 其他服务分组
 custom_proxy_group=📧邮件服务`select`[]✈️起飞`[]DIRECT`[]🇺🇸美国`[]🇸🇬新加坡`[]🎏其他
 custom_proxy_group=🔎搜索引擎`select`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]DIRECT
 custom_proxy_group=🐟漏网之鱼`select`[]✈️起飞`[]🛩️墙内`[]💩广告`[]DIRECT`[]👆🏻指定
 
-# 地区分组 - 自动测速
-custom_proxy_group=🇭🇰香港`url-test`(?i)港|hongkong|hk`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼台湾`url-test`(?i)台|taiwan|tw`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬新加坡`url-test`(?i)新|狮|獅|singapore|sg`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵日本`url-test`(?i)日|japan|jp`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic.com/generate_204`300,,50
+# 地区自动测速配置
+custom_proxy_group=🇭🇰香港`url-test`(?i)港|hongkong|hk`https://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=🇹🇼台湾`url-test`(?i)台|taiwan|tw`https://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=🇸🇬新加坡`url-test`(?i)新|狮|獅|singapore|sg`https://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=🇯🇵日本`url-test`(?i)日|japan|jp`https://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🎏其他`select`^(?!.*(港|hongkong|hk|台|taiwan|tw|新|狮|獅|singapore|sg|日|japan|jp|美|states|us)).*$
 
 # ========== 分流规则配置 ==========
-# 本地网络和基础规则
 ruleset=DIRECT,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt
-
-# 广告和隐私保护
 ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml
-
-# 高频使用的开发工具和AI服务
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Developer/Developer.yaml
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-
-# AI服务
 ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AI/AI.yaml
-
-# 即时通讯（高优先级）
 ruleset=📱电报,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=📱电报,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt
-
-# 主要国际平台服务
 ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🍎苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
-
-# 社交媒体平台 - 使用统一的社交媒体规则
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Instagram/Instagram.list
@@ -102,41 +81,28 @@ ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Reddit/Reddit.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.list
-
-# 游戏平台
 ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
-
-# 流媒体服务
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=🎬Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=🎬YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=🟢Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=📺B站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
-
-# 重要的国内服务
 ruleset=🛩️墙内,https://raw.githubusercontent.com/moistrr/Clashruleset/refs/heads/main/config/zhilian.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
-
-# 国外网站集合规则
 ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
-
-# 额外增加的高效域名集
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
 ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
-ruleset=🛩️墙内,[]GEOIP,LAN
-ruleset=🛩️墙内,[]GEOIP,CN
-
-# 兜底规则
+ruleset=🛩️墙内,[]GEOIP,LAN,no-resolve
+ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 ruleset=🐟漏网之鱼,[]FINAL
 
-# ========== Clash核心配置 ==========
-# 基础网络设置 - 中国大陆网络环境优化
+# ========== Clash核心配置 - 移动设备优化 ==========
 mixed-port: 7890
 allow-lan: true
 bind-address: '*'
 mode: rule
 log-level: silent
-ipv6: false # 中国大陆IPv6支持不完善，关闭以避免连接问题
+ipv6: false
 external-controller: 127.0.0.1:9090
 external-ui: dashboard
 secret: ""
@@ -144,11 +110,12 @@ profile:
   store-selected: true
   store-fake-ip: true
 
-# 性能优化参数 - 针对中国大陆网络特点调整
 unified-delay: true
 tcp-concurrent: true
-keep-alive-interval: 30 # 增大保活间隔，适应中国网络波动特点
+keep-alive-interval: 25
 find-process-mode: strict
+
+# 网络嗅探配置
 sniffer:
   enable: true
   sniff:
@@ -161,48 +128,53 @@ sniffer:
     - '*.facebook.com'
     - '*.youtube.com'
     - '*.netflix.com'
+    - '*.openai.com'
   skip-domain:
     - 'Mijia Cloud'
     - '*.alipay.com'
     - '*.taobao.com'
     - '*.jd.com'
-    - '*.weixin.qq.com'
     - '*.qq.com'
+    - '*.weixin.qq.com'
     - '*.baidu.com'
+    - '*.kuaishou.com'
+    - '*.pinduoduo.com'
+    - '*.4399.com'
+    - '*.bilibili.com'
+    - '*.douyin.com'
+    - '*.tencent.com'
+    - '*.mihoyo.com'
+    - '*.weibo.com'
+    - '*.iqiyi.com'
+    - '*.xiaomi.com'
+    - '*.huawei.com'
+    - '*.meituan.com'
+    - '*.ele.me'
 
-# TUN模式配置 - 中国大陆网络优化
+# TUN配置
 tun:
   enable: true
-  stack: system # 使用系统栈提高兼容性
+  stack: system
   dns-hijack:
     - any:53
     - tcp://any:53
-    - udp://any:53  # 添加UDP拦截，解决部分应用DNS泄露问题
+    - udp://any:53
   auto-route: true
   auto-detect-interface: true
-  strict-route: false # 国内环境设为false以避免某些应用无法联网
-  mtu: 1420 # 调整为适合中国网络环境的值
+  strict-route: false
+  mtu: 9000
   inet4-route-address:
     - 0.0.0.0/1
     - 128.0.0.0/1
-  inet6-route-address:
-    - ::/1
-    - 8000::/1
   endpoint-independent-nat: true
-  include-uid:
-    - 0
-  exclude-uid:
-    - 1000
   include-android-user:
     - 0
     - 10
-  disable-udp: false
   stack-option:
-    mtu: 1420
+    mtu: 9000
     gso: true
-    gso-size: 65535
 
-# DNS配置 - 中国大陆网络环境优化
+# DNS配置
 dns:
   enable: true
   ipv6: false
@@ -222,66 +194,62 @@ dns:
     - 'mtalk.google.com'
     - 'lens.l.google.com'
     - 'dl.google.com'
-    - 'android.clients.google.com'
-    - '*.126.com'
-    - '*.126.net'
-    - '*.163.com'
-    - '*.douyin.com'
+    - 'dl.l.google.com'
+    - 'update.googleapis.com'
     - '*.kuaishou.com'
+    - '*.douyin.com'
+    - '*.tiktokv.com'
+    - '*.snssdk.com'
+    - '*.amemv.com'
+    - '*.xiaohongshu.com'
     - '*.meituan.com'
-    - '*.dianping.com'
-    - '*.alicdn.com'
-    - '*.tencent.com'
-    - '*.tencent-cloud.com'
-    - '*.mi.com'
-    - '*.xiaomi.com'
     - '*.pinduoduo.com'
-    - '*.unionpay.com'
-    - '*.ithome.com'
-    - '*.xunlei.com'
+    - '*.icloud.com'
     - '*.icloud-content.com'
-    - 'fast-edge.*.tiktokv.com'
-    - 'p16-tiktokcdn-*.ibyteimg.com'
+    - '*.tencent.com'
+    - '*.tencent-cloud.net'
+    - '*.bilibili.com'
+    - '*.bilivideo.com'
+    - '*.hdslb.com'
+    - 'connect.rom.miui.com'
+    - '*.cmpassport.com'
+    - '*.10010.com'
+    - '*.189.cn'
+    - '*.10086.cn'
+    - '*.iflytek.com'
+    - '*.kugou.com'
+    - '*.kuwo.cn'
+    - '*.iqiyi.com'
+    - '*.qiyi.com'
+    - '*.cctv.com'
+    - '*.youku.com'
+    - '*.mgtv.com'
+    - 'weixin.qq.com'
+    - '*.weibo.com'
+    - '*.aliyun.com'
+    - '*.aliyuncs.com'
+    - '*.csdn.net'
+    - '*.netease.com'
   use-hosts: true
-  nameserver-cache-size: 8192 # 墛大缓存提高访问速度
-  cache-size: 10240 # 针对中国网络提高缓存容量
-  cache-expire: 7200 # 延长缓存有效期至2小时，减少DNS查询频率
+  nameserver-cache-size: 4096
+  cache-size: 8192
+  cache-expire: 1800
   prefer-h3: false
 
-  # DNS预热功能 - 针对中国网站优化
-  prefetch-domain: true
-  prefetch-domains:
-    - 'baidu.com'
-    - 'weibo.com'
-    - 'qq.com'
-    - 'bilibili.com'
-    - 'alipay.com'
-    - 'taobao.com'
-    - 'jd.com'
-    - 'weixin.qq.com'
-    - 'douyin.com'
-    - 'zhihu.com'
-  prefetch-interval: 1800 # 设置为30分钟，平衡性能和网络消耗
-
-  # 默认DNS服务器 - 优先使用国内DNS降低延迟
   default-nameserver:
-    - 223.6.6.6 # 阿里DNS
+    - 223.6.6.6   # 阿里DNS
     - 119.29.29.29 # 腾讯DNS
-    - 114.114.114.114 # 114DNS
 
-  # 主要DNS服务器 - 优化移动网络下的解析速度
   nameserver:
-    - https://dns.alidns.com/dns-query # 阿里加密DNS
-    - https://223.5.5.5/dns-query # 阿里DNS备选
-    - https://doh.pub/dns-query # 腾讯DoH
+    - https://dns.alidns.com/dns-query
+    - https://doh.pub/dns-query
+    - 223.5.5.5 # 阿里备用
 
-  # 国外回落DNS - 选择延迟较低的服务器
   fallback:
     - https://dns.google/dns-query
     - https://cloudflare-dns.com/dns-query
-    - tls://8.8.4.4:853 # Google备选，使用TLS降低干扰
+    - 8.8.8.8
 
-  # DNS污染防护 - 针对中国网络环境优化
   fallback-filter:
     geoip: true
     geoip-code: CN
@@ -289,7 +257,7 @@ dns:
       - 240.0.0.0/4
       - 127.0.0.1/8
       - 0.0.0.0/32
-      - 100.64.0.0/10 # 添加运营商CGNAT地址
+      - 100.64.0.0/10
     domain:
       - '+.google.com'
       - '+.facebook.com'
@@ -297,64 +265,38 @@ dns:
       - '+.github.com'
       - '+.twitter.com'
       - '+.instagram.com'
-      - '+.wikipedia.org'
       - '+.netflix.com'
       - '+.openai.com'
+      - '+.telegram.org'
+      - '+.discord.com'
+      - '+.medium.com'
+      - '+.reddit.com'
+      - '+.spotify.com'
+      - '+.linkedin.com'
+      - '+.notion.so'
+      - '+.dropbox.com'
 
-# 代理模式高级设置 - 中国大陆网络优化
+# 网络优化
+url-test-interval: 3600  # 1小时测试，节省电池
+connection-test-url: https://cp.cloudflare.com/generate_204
+test-timeout: 3
+tolerance: 150
+
+# 移动设备优化
 proxy-groups-first: true
 global-client-fingerprint: chrome
+tcp-connection-reuse: true
+geodata-mode: true
+disable-udp-traffic: false
+udp-forward-policy: preferIPv4
 
-# 中国大陆网络状态检测优化
-url-test-interval: 1200 # 设为20分钟，平衡准确性和网络消耗
-connection-test-url: https://www.gstatic.com/generate_204 # 此URL在中国访问较稳定
-test-timeout: 5 # 增加超时时间，适应中国网络波动
-tolerance: 150 # 添加延迟容差，避免频繁切换
-
-# 自动选择相关设置 - 中国大陆网络优化
-auto-switch-interval: 3600 # 设为1小时，减少切换频率
-latency-timeout: 5000 # 增加延迟超时至5秒，适应网络波动
-use-default-policy: true
-
-# 中国大陆网络环境特殊优化
-tcp-concurrent: true
-authentication: []
-external-controller-tls: ""
-
-# 优化流量管理以应对运营商QoS限制
+# 移动网络防劫持优化
 experimental:
-  ignore-resolve-fail: true  # 忽略DNS解析失败，避免连接中断
-  interface-name: en0  # 自动选择合适的网络接口
-  sniff-tls-sni: true  # 嗅探TLS SNI
+  ignore-resolve-fail: true
+  sniff-tls-sni: true
+  udp-relay-mode: Compatible
+  doh3-fingerprint: chrome
 
-# 优化的TUN配置 - 防止运营商劫持
-ebpf:
-  auto-redir: false  # 自动重定向，处理复杂网络环境
-  redirect-to-tun:
-    - eth0
-
-# 国内/国外延迟差异化处理
-url-test-interval: 1200  # 20分钟测试一次，减少资源消耗
-tolerance: 150  # 容忍150ms延迟差异，避免频繁切换节点
-
-# 网络特征混淆，避免流量特征识别
-global-client-fingerprint: chrome  # 使用Chrome指纹
-geodata-mode: true  # 使用GeoIP数据提高判断准确性
-tcp-connection-reuse: true  # TCP连接复用提高性能
-
-# 中国环境特殊网络状态处理
-disconnection-check:
-  enable: true
-  timeout: 5000  # 5秒超时更适合中国网络波动
-  reconnect-timeout: 10000  # 10秒后重连
-
-# 高级DNS防泄漏设置
-local-dns-resolve: false  # 避免本地DNS解析泄漏
-disable-system-dns: true  # 禁用系统DNS
-udp-relay-for-dns-traffic: true  # DNS流量使用UDP中继
-
-# 针对运营商干扰的优化配置
-traffic-control:
-  enable: true
-  tcp-idle-timeout: 900  # 15分钟没活动关闭TCP，减少资源占用
-  udp-idle-timeout: 60   # 减少UDP连接保持时间
+# 隐私增强
+private-relay: true
+remote-dns-resolve: true
