--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -8,19 +8,19 @@ exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|(\d[\d.]*\s*[MG]B[^\
 add_emoji=true
 remove_old_emoji=true
 emoji=(?!🇨🇳)[🇦-🇿]{2},
-emoji=^(?!.*[🇦-🇿]{2}).*(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|United States|Washington|Portland|Dallas|Oregon|Phoenix|Fremont|Silicon Valley|San Francisco|Las Vegas|Los Angeles|San Jose|Santa Clara|Seattle|Chicago|New York|Denver|California|Virginia|Texas|Atlanta|Florida|Miami),🇺🇸
-emoji=^(?!.*[🇦-🇿]{2}).*(香港|Hong Kong),🇭🇰
-emoji=^(?!.*[🇦-🇿]{2}).*(日本|东京|大阪|名古屋|埼玉|福冈|Japan|Tokyo|Osaka|Nagoya|Saitama|Fukuoka),🇯🇵
-emoji=^(?!.*[🇦-🇿]{2}).*(新加坡|Singapore),🇸🇬
-emoji=^(?!.*[🇦-🇿]{2}).*(台湾|台北|新北|彰化|高雄|Taiwan|Taipei|New Taipei|Changhua|Kaohsiung),🇹🇼
-emoji=^(?!.*[🇦-🇿]{2}).*(英国|英格兰|伦敦|曼彻斯特|United Kingdom|England|London|Manchester),🇬🇧
-emoji=^(?!.*[🇦-🇿]{2}).*(加拿大|多伦多|蒙特利尔|温哥华|Canada|Toronto|Montreal|Vancouver),🇨🇦
-emoji=^(?!.*[🇦-🇿]{2}).*(德国|法兰克福|柏林|Germany|Frankfurt|Berlin),🇩🇪
-emoji=^(?!.*[🇦-🇿]{2}).*(法国|巴黎|France|Paris),🇫🇷
-emoji=^(?!.*[🇦-🇿]{2}).*(韩国|首尔|South Korea|Seoul),🇰🇷
-emoji=^(?!.*[🇦-🇿]{2}).*(澳大利亚|悉尼|墨尔本|Australia|Sydney|Melbourne),🇦🇺
-emoji=^(?!.*[🇦-🇿]{2}).*(俄罗斯|莫斯科|圣彼得堡|Russia|Moscow|Saint Petersburg),🇷🇺
-emoji=^(?!.*[🇦-🇿]{2}).*(中国|深圳|北京|上海|广东|山东|湖北|湖南|天津|重庆|辽宁|吉林|黑龙江|江苏|浙江|安徽|福建|云南|四川|陕西|甘肃|青海|内蒙古|西藏|宁夏|新疆|China|Shenzhen|Beijing|Shanghai|Guangdong|Shandong|Hubei|Hunan|Tianjin|Chongqing|Liaoning|Jilin|Heilongjiang|Jiangsu|Zhejiang|Anhui|Fujian|Yunnan|Sichuan|Shanxi|Gansu|Qinghai|Inner Mongolia|Tibet|Ningxia|Xinjiang),🇨🇳
+emoji=^(?!.*[🇦-🇿]{2}).*(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States|Washington|Portland|Dallas|Oregon|Phoenix|Fremont|Silicon Valley|San Francisco|Las Vegas|Los Angeles|San Jose|Santa Clara|Seattle|Chicago|New York|Denver|California|Virginia|Texas|Atlanta|Florida|Miami),🇺🇸
+emoji=^(?!.*[🇦-🇿]{2}).*(香港|HK|Hong Kong),🇭🇰
+emoji=^(?!.*[🇦-🇿]{2}).*(日本|东京|大阪|名古屋|埼玉|福冈|JP|Japan|Tokyo|Osaka|Nagoya|Saitama|Fukuoka),🇯🇵
+emoji=^(?!.*[🇦-🇿]{2}).*(新加坡|狮城|SG|Singapore),🇸🇬
+emoji=^(?!.*[🇦-🇿]{2}).*(台湾|台北|新北|彰化|高雄|TW|Taiwan|Taipei|New Taipei|Changhua|Kaohsiung),🇹🇼
+emoji=^(?!.*[🇦-🇿]{2}).*(英国|英格兰|伦敦|曼彻斯特|UK|United Kingdom|England|London|Manchester),🇬🇧
+emoji=^(?!.*[🇦-🇿]{2}).*(加拿大|多伦多|蒙特利尔|温哥华|CA|Canada|Toronto|Montreal|Vancouver),🇨🇦
+emoji=^(?!.*[🇦-🇿]{2}).*(德国|法兰克福|柏林|DE|Germany|Frankfurt|Berlin),🇩🇪
+emoji=^(?!.*[🇦-🇿]{2}).*(法国|巴黎|FR|France|Paris),🇫🇷
+emoji=^(?!.*[🇦-🇿]{2}).*(韩国|首尔|KR|Korea|South Korea|Seoul),🇰🇷
+emoji=^(?!.*[🇦-🇿]{2}).*(澳大利亚|悉尼|墨尔本|AU|Australia|Sydney|Melbourne),🇦🇺
+emoji=^(?!.*[🇦-🇿]{2}).*(俄罗斯|莫斯科|圣彼得堡|RU|Russia|Moscow|Saint Petersburg),🇷🇺
+emoji=^(?!.*[🇦-🇿]{2}).*(中国|深圳|北京|上海|广东|山东|湖北|湖南|天津|重庆|辽宁|吉林|黑龙江|江苏|浙江|安徽|福建|云南|四川|陕西|山西|甘肃|青海|内蒙古|西藏|宁夏|新疆|CN|China|Shenzhen|Beijing|Shanghai|Guangdong|Shandong|Hubei|Hunan|Tianjin|Chongqing|Liaoning|Jilin|Heilongjiang|Jiangsu|Zhejiang|Anhui|Fujian|Yunnan|Sichuan|Shaanxi|Shanxi|Gansu|Qinghai|Inner Mongolia|Tibet|Ningxia|Xinjiang),🇨🇳
 emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤|@|：|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]|\d{1,3}(?!\d))|^[^:]+:(?![\da-f]{0,4}:|\s*\d{1,5}([/?]|\s*$)))),ℹ️
 
 enable_rule_generator=true
@@ -74,7 +74,6 @@ ruleset=📱电报,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/re
 ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🍎苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Instagram/Instagram.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Facebook/Facebook.list
