--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -27,14 +27,25 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 # ========== 代理分组配置 ==========
+# 主分流组
 custom_proxy_group=✈️起飞`select`[]⚡低延迟`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定`[]DIRECT`[]REJECT
+custom_proxy_group=🛩️墙内`select`[]DIRECT`[]✈️起飞
+custom_proxy_group=💩广告`select`[]REJECT`[]DIRECT`[]✈️起飞
+custom_proxy_group=🐟漏网之鱼`select`[]✈️起飞`[]🛩️墙内`[]💩广告`[]DIRECT`[]👆🏻指定
+
+# 测速和特殊选择组
 custom_proxy_group=⚡低延迟`url-test`.*`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=👆🏻指定`select`.*
 
-custom_proxy_group=🛩️墙内`select`[]DIRECT`[]✈️起飞
-custom_proxy_group=💩广告`select`[]REJECT`[]DIRECT`[]✈️起飞
-
+# 国内应用分组
+custom_proxy_group=📊国内应用`select`[]DIRECT`[]✈️起飞
+custom_proxy_group=🏦金融理财`select`[]DIRECT
+custom_proxy_group=🎵音乐`select`[]DIRECT`[]🇭🇰香港`[]🇸🇬新加坡`[]✈️起飞
 custom_proxy_group=📺B站`select`[]🛩️墙内`[]DIRECT`[]🇭🇰香港`[]🇹🇼台湾
+custom_proxy_group=🎮国内游戏`select`[]DIRECT`[]✈️起飞
+custom_proxy_group=☁️云服务`select`[]DIRECT`[]✈️起飞`[]🇭🇰香港
+
+# 国际服务分组
 custom_proxy_group=🎬流媒体`select`[]✈️起飞`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定
 custom_proxy_group=🎬Netflix`select`[]🎬流媒体`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他
 custom_proxy_group=🎬YouTube`select`[]🎬流媒体`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国
@@ -48,14 +59,14 @@ custom_proxy_group=🤖AI`select`[]🇺🇸美国`[]🇹🇼台湾`[]🇸🇬新
 
 custom_proxy_group=🎮游戏平台`select`[]✈️起飞`[]DIRECT`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🎏其他
 custom_proxy_group=🛡️Google服务`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]DIRECT
+custom_proxy_group=📧邮件服务`select`[]✈️起飞`[]DIRECT`[]🇺🇸美国`[]🇸🇬新加坡`[]🎏其他
+custom_proxy_group=🔎搜索引擎`select`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]DIRECT
+
+# 系统服务分组
 custom_proxy_group=Ⓜ️微软服务`select`[]DIRECT`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本
 custom_proxy_group=🍎苹果服务`select`[]DIRECT`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本
 
-custom_proxy_group=📧邮件服务`select`[]✈️起飞`[]DIRECT`[]🇺🇸美国`[]🇸🇬新加坡`[]🎏其他
-custom_proxy_group=🔎搜索引擎`select`[]✈️起飞`[]🇺🇸美国`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]DIRECT
-custom_proxy_group=🐟漏网之鱼`select`[]✈️起飞`[]🛩️墙内`[]💩广告`[]DIRECT`[]👆🏻指定
-
-# 地区自动测速配置
+# 地区分组
 custom_proxy_group=🇭🇰香港`url-test`(?i)港|hongkong|hk`https://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🇹🇼台湾`url-test`(?i)台|taiwan|tw`https://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🇸🇬新加坡`url-test`(?i)新|狮|獅|singapore|sg`https://www.gstatic.com/generate_204`300,,100
@@ -64,33 +75,57 @@ custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic
 custom_proxy_group=🎏其他`select`^(?!.*(港|hongkong|hk|台|taiwan|tw|新|狮|獅|singapore|sg|日|japan|jp|美|states|us)).*$
 
 # ========== 分流规则配置 ==========
+# 基础规则
 ruleset=DIRECT,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt
 ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml
+
+# 国内应用规则
+ruleset=🏦金融理财,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UnionPay/UnionPay.list
+ruleset=🏦金融理财,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AliPay/AliPay.list
+ruleset=🏦金融理财,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChatPay/WeChatPay.list
+ruleset=📊国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChat/WeChat.list
+ruleset=📊国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance.list
+ruleset=🎵音乐,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.list
+ruleset=🎵音乐,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/QQMusic/QQMusic.list
+ruleset=🎮国内游戏,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tencent/Tencent.list
+ruleset=🎮国内游戏,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEase/NetEase.list
+ruleset=☁️云服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AlibabaCloud/AlibabaCloud.list
+ruleset=☁️云服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TencentCloud/TencentCloud.list
+
+# 系统服务规则
+ruleset=🍎苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
+ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+
+# 国际服务规则
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Developer/Developer.yaml
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
 ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AI/AI.yaml
+ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=📱电报,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=📱电报,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt
-ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
-ruleset=🍎苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
-ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Instagram/Instagram.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Facebook/Facebook.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Reddit/Reddit.list
 ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.list
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
-ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
+
+# 流媒体规则
 ruleset=🎬Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=🎬YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=🟢Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=📺B站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
+ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
+ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
+
+# 通用规则
 ruleset=🛩️墙内,https://raw.githubusercontent.com/moistrr/Clashruleset/refs/heads/main/config/zhilian.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
 ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
 ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
+
+# 兜底规则
 ruleset=🛩️墙内,[]GEOIP,LAN,no-resolve
 ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 ruleset=🐟漏网之鱼,[]FINAL
@@ -229,6 +264,54 @@ dns:
     - '*.aliyuncs.com'
     - '*.csdn.net'
     - '*.netease.com'
+    - '*.unionpay.com'
+    - '*.95516.com'
+    - '*.zhihu.com'
+    - '*.douban.com'
+    - '*.doubanio.com'
+    - '*.36kr.com'
+    - '*.126.com'
+    - '*.126.net'
+    - '*.127.net'
+    - '*.163.com'
+    - '*.alicdn.com'
+    - '*.alipay.com'
+    - '*.alipayobjects.com'
+    - '*.amap.com'
+    - '*.autonavi.com'
+    - '*.dingtalk.com'
+    - '*.gtimg.com'
+    - '*.idqqimg.com'
+    - '*.meituan.net'
+    - '*.mi.com'
+    - '*.xiaomi.com'
+    - '*.mipay.com'
+    - '*.mmstat.com'
+    - '*.jd.com'
+    - '*.360buyimg.com'
+    - '*.51job.com'
+    - '*.58.com'
+    - '*.chinaz.com'
+    - '*.ctrip.com'
+    - '*.didiglobal.com'
+    - '*.didialift.com'
+    - '*.huya.com'
+    - '*.ithome.com'
+    - '*.ke.com'
+    - '*.meitu.com'
+    - '*.sina.com.cn'
+    - '*.weibo.com'
+    - '*.ruanmei.com'
+    - '*.douyu.com'
+    - '*.ximalaya.com'
+    - '*.zimuzu.io'
+    - '*.zmz2019.com'
+    - '*.acgvideo.com'
+    - '*.aixifan.com'
+    - '*.bilibili.com'
+    - '*.acfun.cn'
+    - '*.hdslb.com'
+    - '*.vip.qq.com'
   use-hosts: true
   nameserver-cache-size: 4096
   cache-size: 8192
@@ -238,11 +321,14 @@ dns:
   default-nameserver:
     - 223.6.6.6   # 阿里DNS
     - 119.29.29.29 # 腾讯DNS
+    - 114.114.114.114 # 114DNS，适合部分电信网络
 
   nameserver:
     - https://dns.alidns.com/dns-query
     - https://doh.pub/dns-query
     - 223.5.5.5 # 阿里备用
+    - 114.114.114.114 # 114DNS备用
+    - https://doh.360.cn/dns-query # 360安全DNS，对国内网站优化较好
 
   fallback:
     - https://dns.google/dns-query
@@ -277,7 +363,7 @@ dns:
 
 # 网络优化
 url-test-interval: 3600  # 1小时测试，节省电池
-connection-test-url: https://cp.cloudflare.com/generate_204
+connection-test-url: https://www.gstatic.com/generate_204
 test-timeout: 3
 tolerance: 150
 
@@ -299,3 +385,21 @@ experimental:
 # 隐私增强
 private-relay: true
 remote-dns-resolve: true
+
+# 中国特定网络环境优化
+# 针对运营商劫持和干扰的对策
+mitm:
+  enable: true # 开启MITM，应对部分运营商劫持
+  skip-cert-verify: false
+  hosts:
+    - '+.googleapis.cn'
+
+# 优化网络连接超时参数，适应中国网络环境
+dial:
+  enable: true
+  timeout: 8 # 默认值5秒可能在中国网络下不够
+  keepalive: 30
+
+# 特定网络环境下的优化策略
+# 适用于校园网/企业网/运营商特殊政策
+proxy-providers-interval: 3600 # 每小时更新代理提供商，适应变化的网络环境
